# Seedance-VideoFactory

./: .gitignore  AGENTS.md  README.md  md-edit_WebUI_操作说明.docx  restart_seedance_gui.bat  start_deepseek_proxy.bat  start_seedance_gui.bat  start_seedance_gui.command  游戏宣发漫剧_AI监制设定词.md  漫剧AI智能剪辑工具_架构设计.md  漫剧工具使用说明.md
.cursor/rules/: restart-gui-after-version-update.mdc
05_Video/: seedance_batch.json
05_Video/scripts/: concat_episode.py  export_versions.py  gui_page.html  media_refs.py  preflight_check.py  publish_rules.py  run_seedance_batch.py  seedance_gui.py  (+2 more)
md_edit_project/: README.md  pyproject.toml  run_webui.py  test_1px.py  test_direct.py  test_ffprobe.py  test_gemini_sub.py  test_httpclient.py  test_size.py  test_sub.py  test_sub_gen.py  test_text_call.py  test_vision_call.py  webui.py
md_edit_project/mdedit/: __main__.py  analyze.py  cache.py  cinematic.py  cli.py  ffmpeg.py  ingest.py  languages.py  llm.py  pipeline.py  plan.py  preview.py  render.py  srt_utils.py  supervisor.py  transcribe.py
md_edit_project/mdedit/hyperframes/: composer.py  enhancer.py  renderer.py  subtitle_gen.py
md_edit_project/mdedit/hyperframes/template_project/: meta.json
md_edit_project/mdedit/hyperframes/templates/cinema/: meta.json
md_edit_project/mdedit/hyperframes/templates/douyin/: meta.json
md_edit_project/mdedit/hyperframes/templates/kinetic/: meta.json
md_edit_project/mdedit/prompts/: analyze_combined.txt  analyze_vision.txt  outline.txt  scoring.txt  supervisor_vision.txt  timeline.txt  video_analysis.txt
md_edit_project/static/: index.html
(+40 files in other folders)
